--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <section class="section" id="intro-software-engineering">
         <h2>Introduction to Software Engineering</h2>
         <ul>
-            <li>Describe software engineering, Software Development Lifecycle (SDLC), and software development tools, technologies, and stacks.</li>
-            <li>List different types of programming languages and create basic programming constructs such as loops and conditions using Python.</li>
+            <li>Describe software engineering, Software Development Lifecycle (SDLC), and software development tools,
+                technologies, and stacks.</li>
+            <li>List different types of programming languages and create basic programming constructs such as loops and
+                conditions using Python.</li>
             <li>Outline approaches to application architecture and design, patterns, and deployment architectures.</li>
             <li>Summarize the skills required in software engineering and describe the career options it provides.</li>
         </ul>
@@ -29,7 +31,8 @@
     <section class="section" id="intro-html-css-js">
         <h2>Introduction to HTML, CSS, & JavaScript</h2>
         <ul>
-            <li>Describe the Web Application Development Ecosystem and terminology like front-end developer, back-end, server-side, and full stack.</li>
+            <li>Describe the Web Application Development Ecosystem and terminology like front-end developer, back-end,
+                server-side, and full stack.</li>
             <li>Identify the developer tools and integrated development environments (IDEs) used by web developers.</li>
             <li>Create and structure basic web pages using HTML and style them with CSS.</li>
             <li>Develop dynamic web pages with interactive features using JavaScript.</li>
@@ -41,8 +44,10 @@
         <h2>Getting Started with Git and GitHub</h2>
         <ul>
             <li>Describe version control and its place in social and collaborative coding and in DevOps.</li>
-            <li>Explain basic Git concepts such as repositories and branches used for distributed version control and social coding.</li>
-            <li>Create GitHub repositories and branches, and perform pull requests (PRs) and merge operations, to collaborate on a team project.</li>
+            <li>Explain basic Git concepts such as repositories and branches used for distributed version control and
+                social coding.</li>
+            <li>Create GitHub repositories and branches, and perform pull requests (PRs) and merge operations, to
+                collaborate on a team project.</li>
             <li>Build your portfolio by creating and sharing an open-source project on GitHub.</li>
         </ul>
     </section>
@@ -51,10 +56,14 @@
     <section class="section" id="js-programming-essentials">
         <h2>JavaScript Programming Essentials</h2>
         <ul>
-            <li>Describe JavaScript development concepts, list ES6 features, outline data structures, and explore arrays, DOM, AJAX, and debugging techniques.</li>
-            <li>Explore handling errors and exceptions, functions and events, apply string manipulation and error-handling techniques, and traverse the DOM.</li>
-            <li>Compare functions, values, reference types, and strategies in promises and async/await, and discuss modifying the appearance of DOM elements.</li>
-            <li>Employ JavaScript functions, services, tools, and libraries to create and style navigation and pages, and AJAX to fetch and display data from APIs.</li>
+            <li>Describe JavaScript development concepts, list ES6 features, outline data structures, and explore
+                arrays, DOM, AJAX, and debugging techniques.</li>
+            <li>Explore handling errors and exceptions, functions and events, apply string manipulation and
+                error-handling techniques, and traverse the DOM.</li>
+            <li>Compare functions, values, reference types, and strategies in promises and async/await, and discuss
+                modifying the appearance of DOM elements.</li>
+            <li>Employ JavaScript functions, services, tools, and libraries to create and style navigation and pages,
+                and AJAX to fetch and display data from APIs.</li>
         </ul>
     </section>
 
@@ -62,7 +71,8 @@
     <section class="section" id="react-frontend-apps">
         <h2>Developing Front-End Apps with React</h2>
         <ul>
-            <li>Develop interactive user interfaces (UIs) and web applications using JavaScript technologies including React, JSX, and ES6.</li>
+            <li>Develop interactive user interfaces (UIs) and web applications using JavaScript technologies including
+                React, JSX, and ES6.</li>
             <li>Build dynamic front-end applications quickly and easily with reusable React components.</li>
             <li>Employ various React concepts and features, including props, states, hooks, forms, and Redux.</li>
             <li>Demonstrate your React skills by building several front-end applications such as a shopping cart.</li>
@@ -84,10 +94,14 @@
     <section class="section" id="cloud-devops-nosql">
         <h2>Get Started With Cloud Native, DevOps, and NoSQL</h2>
         <ul>
-            <li>Explore cloud-native applications concepts and methodologies, recognize CNCF’s impact, and analyze the benefits of CI/CD, Agile, and Scrum.</li>
-            <li>Recognize the DevOps culture, and its significance, differentiate between TDD and BDD, and explore the principles and characteristics of MongoDB.</li>
-            <li>Implement CI/CD practices and connect and integrate user stories using Zenhub to facilitate the Agile development process.</li>
-            <li>Enhance application functionality using tools and techniques, store, manage, and perform basic data operations using MongoDB and CRUD operations.</li>
+            <li>Explore cloud-native applications concepts and methodologies, recognize CNCF’s impact, and analyze the
+                benefits of CI/CD, Agile, and Scrum.</li>
+            <li>Recognize the DevOps culture, and its significance, differentiate between TDD and BDD, and explore the
+                principles and characteristics of MongoDB.</li>
+            <li>Implement CI/CD practices and connect and integrate user stories using Zenhub to facilitate the Agile
+                development process.</li>
+            <li>Enhance application functionality using tools and techniques, store, manage, and perform basic data
+                operations using MongoDB and CRUD operations.</li>
         </ul>
     </section>
 
@@ -97,8 +111,10 @@
         <ul>
             <li>Using containers, learn how to move applications quickly across any environment.</li>
             <li>Build cloud-native applications using Docker, Kubernetes, OpenShift, and Istio.</li>
-            <li>Describe and leverage Kubernetes architecture to set up and use an entire lifecycle-based container management system.</li>
-            <li>Create and leverage a YAML deployment file to configure and create resources such as pods, services, replicasets, and others in a declarative way.</li>
+            <li>Describe and leverage Kubernetes architecture to set up and use an entire lifecycle-based container
+                management system.</li>
+            <li>Create and leverage a YAML deployment file to configure and create resources such as pods, services,
+                replicasets, and others in a declarative way.</li>
         </ul>
     </section>
 
@@ -106,9 +122,12 @@
     <section class="section" id="microservices-serverless">
         <h2>Application Development using Microservices and Serverless</h2>
         <ul>
-            <li>Summarize the fundamentals of Microservices, their advantages, and contrast with monolithic architectures.</li>
-            <li>Create REST API endpoints and invoke them using cURL and Postman; Use SwaggerUI to document and test APIs.</li>
-            <li>Create and deploy microservices using Docker containers and serverless technologies like IBM Code Engine.</li>
+            <li>Summarize the fundamentals of Microservices, their advantages, and contrast with monolithic
+                architectures.</li>
+            <li>Create REST API endpoints and invoke them using cURL and Postman; Use SwaggerUI to document and test
+                APIs.</li>
+            <li>Create and deploy microservices using Docker containers and serverless technologies like IBM Code
+                Engine.</li>
             <li>Practice hands-on with labs and projects using a no-charge cloud-based environment.</li>
         </ul>
     </section>
@@ -139,10 +158,14 @@
     <section class="section" id="career-guide-interview">
         <h2>Software Developer Career Guide and Interview Preparation</h2>
         <ul>
-            <li>Describe the role of a software engineer and some career path options as well as the prospective opportunities in the field.</li>
-            <li>Explain how to build a foundation for a job search, including researching job listings, writing a resume, and making a portfolio of work.</li>
-            <li>Summarize what a candidate can expect during a typical job interview cycle, different types of interviews, and how to prepare for interviews.</li>
-            <li>Explain how to give an effective interview, including techniques for answering questions and how to make a professional personal presentation.</li>
+            <li>Describe the role of a software engineer and some career path options as well as the prospective
+                opportunities in the field.</li>
+            <li>Explain how to build a foundation for a job search, including researching job listings, writing a
+                resume, and making a portfolio of work.</li>
+            <li>Summarize what a candidate can expect during a typical job interview cycle, different types of
+                interviews, and how to prepare for interviews.</li>
+            <li>Explain how to give an effective interview, including techniques for answering questions and how to make
+                a professional personal presentation.</li>
         </ul>
     </section>
 
